--- a/change-password.html
+++ b/change-password.html
@@ -17,15 +17,15 @@
     <form action="#" method="post" class="password-form password-error">
         <p class="error-message">Пароль не соответствует требованиям</p>
       
-        <div class="password-input error-input">
+        <div class="password-input inputs-error">
           <input type="password" name="old-password" placeholder="Введите старый пароль">
         </div>
 
-        <div class="password-input error-input">
+        <div class="password-input">
           <input type="password" name="new-password" placeholder="Придумайте новый пароль">
         </div>
 
-        <div class="password-input error-input">
+        <div class="password-input">
           <input type="password" name="repeat-password" placeholder="Повторите новый пароль">
         </div>
       
