--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <div class="profile-info">
         <img src="img/Users.svg" alt="Иконка профиля" class="user-icon">
         <div class="user-info">
-          <p Class="UserName">UserName</p>
-          <p class="examplemail">example@gmail.com</p>
+          <p Class="user-name">UserName</p>
+          <p class="examle-mail">example@gmail.com</p>
         </div>
 
       </div>
