--- a/edit-info.html
+++ b/edit-info.html
@@ -10,7 +10,7 @@
 <body>
     <div class="edit-card">
       <div class="title">
-        <h3>Изменение информации о себе</h3>
+        <h3>Измененить информацию о себе</h3>
       </div>
 
       <div class="inputs-container">
