--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Профиль</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
+  <link href="css/variables.css" rel="stylesheet">
 </head>
 <body>
 
