--- a/discipline-page.html
+++ b/discipline-page.html
@@ -71,7 +71,7 @@
       </div>
     </div>
 
-    <div class="card-description">
+    <div class="card">
       <div class="icon-text">
         <img src="img/note-2.svg" alt="Иконка страниц" class="icon">
         <h3 class="card-subtitle">Описание</h3>
@@ -86,9 +86,9 @@
       <summary class="icon-text-teachers">
         <img src="img/Icon.svg" alt="Иконка шляпы" class="icon">
         <h3 class="card-subtitle">Преподаватели</h3>
-        <button type="button" class="toggle-button" aria-label="Открыть список">
+        <span type="button" class="toggle-button" aria-label="Открыть список">
           <img src="img/icon2.svg" alt="Открывающая стрелка вниз">
-        </button>
+        </span>
       </summary>
       <ul class="teachers">
         <li>Фамилия Имя Отчество</li>
