--- a/discipline-page.html
+++ b/discipline-page.html
@@ -86,7 +86,7 @@
       <summary class="icon-text-teachers">
         <img src="img/Icon.svg" alt="Иконка шляпы" class="icon">
         <h3 class="card-subtitle">Преподаватели</h3>
-        <span type="button" class="toggle-button" aria-label="Открыть список">
+        <span type="button" class="toggle-button" aria-p="Открыть список">
           <img src="img/icon2.svg" alt="Открывающая стрелка вниз">
         </span>
       </summary>
