--- a/main-page.html
+++ b/main-page.html
@@ -30,17 +30,17 @@
     </div>
     <section class="reviews-header">
         <form class="sort-form" action="#" method="get">
-            <span class="sort-label">Сортировка по:</span>
+            <span class="sort-p">Сортировка по:</span>
 
-            <label class="sort-option">
+            <p class="sort-option">
               <input type="radio" name="sort" value="date" checked>
               <span class="sort-text">Общей оценке</span>
-            </label>
+            </p>
 
-            <label class="sort-option">
+            <p class="sort-option">
               <input type="radio" name="sort" value="rating">
               <span class="sort-text">Количеству отзывов</span>
-            </label>
+            </p>
         </form>
         <div class="filters-container">
             <button class="filter-button">
