--- a/reviews-page.html
+++ b/reviews-page.html
@@ -41,22 +41,22 @@
 
     <section class="reviews-header">
         <form class="sort-form" action="#" method="get">
-            <span class="sort-label">Сортировка по:</span>
+            <span class="sort-p">Сортировка по:</span>
 
-            <label class="sort-option">
+            <p class="sort-option">
               <input type="radio" name="sort" value="date" checked>
               <span class="sort-text">Дате</span>
-            </label>
+            </p>
 
-            <label class="sort-option">
+            <p class="sort-option">
               <input type="radio" name="sort" value="rating">
               <span class="sort-text">Рейтингу</span>
-            </label>
+            </p>
 
-            <label class="sort-option">
+            <p class="sort-option">
               <input type="radio" name="sort" value="usefulness">
               <span class="sort-text">Полезности</span>
-            </label>
+            </p>
         </form>
     </section>
 
