Добавляет страницу FAQ

--- a/discipline-page.html
+++ b/discipline-page.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header class="header">
-    <div class="logo">ЛОГО</div>
+    <div class="logo">STUDEX</div>
     <a href="index.html">
         <img src="img/Users.svg" alt="Иконка профиля" class="user-icon">
     </a>
